<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/etTicketTitleOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:ems="10"
        android:hint="@string/create_ticket_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTicketDescriptionOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/create_ticket_descr_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/etTicketTitleOld"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etTicketTitleOld"
        app:layout_constraintTop_toBottomOf="@+id/etTicketTitleOld" />

    <Button
        android:id="@+id/bTicketCreateOld"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="onClickTicketCreate"
        android:text="@string/create_ticket_button_text"
        app:layout_constraintEnd_toEndOf="@+id/etTicketDescriptionOld"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etTicketDescriptionOld"
        app:layout_constraintTop_toBottomOf="@+id/etTicketDescriptionOld" />

    <Button
        android:id="@+id/bChooseImageOld"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="onClickChooseImage"
        android:text="@string/create_ticket_button_image"
        app:layout_constraintEnd_toEndOf="@+id/bTicketCreateOld"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bTicketCreateOld"
        app:layout_constraintTop_toBottomOf="@+id/bTicketCreateOld" />

    <ImageView
        android:id="@+id/ivUploadedImgOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>