<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTicketActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTicketAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:text="_"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvTicketCoordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:text="_" />

            <EditText
                android:id="@+id/etTicketTitleNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:hint="@string/create_ticket_name_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etTicketDescriptionNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/create_ticket_descr_hint"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/bTicketCreateNew"
                android:onClick="onClickTicketCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_ticket_button_text" />

            <Button
                android:id="@+id/bChooseImageNew"
                android:onClick="onClickChooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_ticket_button_image" />

            <ListView
                android:id="@+id/lvCreateTicketImages"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>